# picture-click-from-svg

./: .gitmodules  LICENSE  README.md  cabal.project  cabal.project.freeze  hie.yaml  picture-click-from-svg.cabal  svg-to-pc.hs
examples/output/: oxford-colleges.sporcle
exe/: Main.hs
src/: DotHacks.hs  Lib.hs  Main.hs
test/: Test.hs
