cabal-version:       3.0
name:                picture-click-from-svg
version:             0.1.0.0

common common
    default-language: GHC2024
    build-depends:
        base,
        composition,
        directory,
        extra,
        filepath,
        FontyFruity,
        JuicyPixels,
        linear,
        mtl,
        pretty-simple,
        rasterific-svg,
        svg-tree,
        text,
    default-extensions:
        DeriveAnyClass
        OverloadedRecordDot
        OverloadedStrings
    ghc-options:
        -Wall

library
    import: common
    hs-source-dirs: src
    build-depends:
    exposed-modules:
        Lib

executable picture-click-from-svg
    import: common
    main-is: Main.hs
    hs-source-dirs: exe
    build-depends:
        picture-click-from-svg,
        ansi-terminal,
        optparse-generic,

test-suite test
    import: common
    type: exitcode-stdio-1.0
    main-is: Test.hs
    hs-source-dirs: test
    build-depends:
        picture-click-from-svg,
        tasty,
        tasty-golden,
